2006-04-25  Frederic Crozat  <fcrozat@mandriva.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_application_launch_with_env), (expand_macro),
	(expand_application_parameters), (test_exec_array),
	(test_exec_macro_expansion):
	Fix % parameters expansion in Exec field (bug #302436).

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-drive.c: (gnome_vfs_drive_finalize),
	(gnome_vfs_drive_compare):
	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_hal_add_drive_without_volumes), (_hal_add_volume),
	* libgnomevfs/gnome-vfs-volume.c: (gnome_vfs_volume_finalize),
	(gnome_vfs_volume_compare), (_gnome_vfs_volume_from_corba):
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	(create_drive_from_mount_point), (create_vol_from_mount),
	(connected_server_compare), (get_connected_servers),
	(create_volume_from_connected_server):
	* libgnomevfs/gnome-vfs-volume-monitor-private.h:
	Create collation keys for volume and drive display names, and
	strcmp the keys instead of the names. Fixes #321320.

	* libgnomevfs/gnome-vfs-method.c: (_gnome_vfs_method_shutdown):
	Remove unused module_element variable.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-directory.c: (directory_visit_internal):
	Return GNOME_VFS_ERROR_INTERRUPTED when callback returns 0.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* modules/ftp-method.c: (query_user_for_authn_info),
	(ftp_connection_create):
	Handle anonymous login failure, add query_user_for_authn_info
	documentation. Fixes #336619.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread):
	Don't strcmp NULL when ejecting. Partly fixes #337014.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-method.c: (module_element_free),
	(init_hash_table), (load_module), (load_module_in_path_list),
	(gnome_vfs_add_module_to_hash_table), (_gnome_vfs_method_shutdown),
	* libgnomevfs/gnome-vfs-method.h: