@@ -153,8 +153,6 @@ various utilities functions to manipulate uris
 
 @location: 
 @Returns: 
-<!-- # Unused Parameters # -->
-@uri: 
 
 
 <!-- ##### FUNCTION gnome_vfs_make_uri_from_input_with_dirs ##### -->
@@ -165,8 +163,6 @@ various utilities functions to manipulate uris
 @location: 
 @dirs: 
 @Returns: 
-<!-- # Unused Parameters # -->
-@uri: 
 
 
 <!-- ##### FUNCTION gnome_vfs_make_uri_from_shell_arg ##### -->
